<resources>
    <string name="app_name" translatable="false">HelloUSTB</string>
    <string name="title_activity_main">Hello USTB</string>
    <string name="title_activity_guide">GUIDE</string>
    <string name="title_activity_browser">Browser</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_net_work_sign_in">Network</string>
    <string name="title_activity_file_manager">Download</string>
    <string name="title_activity_share_app">Share App</string>
    <string name="title_activity_web_notifications">Notifications</string>
    <string name="title_activity_record_query_detail">Score Detail</string>
    <string name="title_activity_timetable_detail">Course Detail</string>
    <string name="title_activity_timetable_edit">Edit Course</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_open_source">Open Source License</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_account_manager">Accounts Manager</string>
    <string name="title_activity_volunteer">Volunteer</string>
    <string name="title_activity_library">Libaray</string>
    <string name="title_activity_book_detail">Book Detail</string>
    <string name="title_activity_my_volunteer_list">My Activities</string>
    <string name="title_activity_volunteer_search">Volunteer Activity Search</string>
    <string name="title_activity_volunteer_detail">Activity Detail</string>
    <string name="title_activity_volunteer_search_result">Search Results</string>
    <string name="title_activity_campus_card_consumption">Campus Card Consumption</string>
    <string name="title_activity_playground">Playground</string>
    <string name="title_activity_ustb__vpn">USTB VPN</string>
    <string name="pressAgainToExit">Press again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="common_title_loading">Loading</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="bottom_text_format">&#169;2015&#8211;%d helloustb.gensh.me \nAll Right Reserved</string>
    <string name="start">Start</string>
    <string name="guide_net_login">一键登录校园网</string>
    <string name="guide_score">期末考试查成绩</string>
    <string name="guide_more">更多功能等你体验</string>
    <string name="guide_net_detail">无需等待 一键搞定</string>
    <string name="guide_score_detail">动动手指 成绩浮现</string>
    <string name="guide_more_detail">查课表，查校园卡消费，查创新学分&#8230;</string>
    <string name="no_network">Network is not available now</string>
    <string name="request_error">Network request error</string>
    <string name="connection_timeout">Request timeout,try again later</string>
    <string name="error_password">Error username or password</string>
    <string name="notification_channel_default">Default</string>
    <string name="error_account_not_found">Error while acquiring user information</string>
    <string name="permission_external_storage_rationale">我们需要使用您的外部存储来存储一些数据</string>
    <string name="permission_external_storage_denied">我们需要使用您的外部存储来存储一些数据</string>
    <string name="permission_external_storage_neverask">我们需要使用您的外部存储来存储一些数据</string>
    <string name="permission_button_allow">Allow</string>
    <string name="permission_button_deny">Deny</string>
    <string name="alert_login">Login</string>
    <string name="alert_confirm">OK</string>
    <string name="alert_delete">Delete</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_ok">OK</string>
    <string name="alert_title_net">校园网用户登录</string>
    <string name="alert_title_deu">本科教学网用户登录</string>
    <string name="alert_title_e">电子信息门户用户登录</string>
    <string name="alert_title_ele">选课系统登录</string>
    <string name="alert_title_volunteer">志愿服务课程管理系统登录</string>
    <string name="edu_login_success">本科教学网登录成功</string>
    <string name="network_requesting">正在请求网路</string>
    <string name="request_network">请求网络</string>
    <string name="errorEmptyUsername">学号不能为空</string>
    <string name="errorEmptyPassword">密码不能为空</string>
    <string name="dialog_score_weight">加权成绩</string>
    <string name="network_unavailable">当前网络连接不可用</string>
    <string name="schnum">Stu No.</string>
    <string name="pass">Password</string>
    <string name="dialog_stu_no_filter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="please_input_account">Please input account</string>
    <string name="empty_common_no_data">No data here&#8230;</string>
    <string name="update_downloading">正在后台下载更新包，下载完成后将会通知您安装</string>
    <string name="update_download_error">Update error,failed to download update package.</string>
    <string name="update_download">Downloading</string>
    <string name="start_download">Start downloading</string>
    <string name="updateNow">Update now</string>
    <string name="sayLater">Later</string>
    <string name="updateRequest">You have new version,update now?\nv%1$s\n%2$s</string>
    <string name="versionUpdate">Version update</string>
    <string name="haveUpdated">This is the latest version!</string>
    <string name="permission_download_apk_rationale">我们需要获取外部存储空间读写权限以下载最新版本安装包</string>
    <string name="permission_download_apk_denied">我们需要获取外部存储空间读写权限以下载最新版本安装包</string>
    <string name="permission_download_apk_neverask">我们需要获取外部存储空间读写权限以下载最新版本安装包</string>
    <string name="image">image</string>
    <string name="nav_header_title">个人中心</string>
    <string name="nav_header_subtitle">个人资料待完善</string>
    <string name="drawer_menu_category_about_and_feedback">About&amp;Feedback</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_account_manager">Accounts</string>
    <string name="drawer_menu_download">Downloads</string>
    <string name="drawer_menu_share">Share</string>
    <string name="share_app_intent_title">Send</string>
    <string name="drawer_menu_feedback">Feedback</string>
    <string name="drawer_menu_github">Github issues</string>
    <string name="drawer_menu_about">About</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_login">个人中心</string>
    <string name="menu_collect">我的收藏</string>
    <string name="menu_message">消息</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="notice_title">你可能关注以下内容</string>
    <string name="setting_about">关于</string>
    <string name="about_play_snack">Closer:%d</string>
    <string name="check_update">检查更新</string>
    <string name="open_source">开源许可</string>
    <string name="open_source_file_location">file:///android_asset/open_source.html</string>
    <string name="app_web">应用网站</string>
    <string name="version_base">%1$s  v%2$s </string>
    <string name="build_time_format">built at %s</string>
    <string name="setting">Settings</string>
    <string name="this_week_num">当前周数</string>
    <string name="feedback_submit">提交</string>
    <string name="contact_information">联系方式(选填,QQ/邮箱/手机号&#8230;)</string>
    <string name="submit_fail_empty">提交失败，您有部分内容未填写完整</string>
    <string name="FeedbackTitle">意见反馈</string>
    <string name="feedbackContent">感谢您的支持，请在此处填写您的意见反馈</string>
    <string name="submitSuccess">提交成功，感谢你的反馈</string>
    <string name="permission_feedback_external_storage_rationale">我们需要获取读取外部存储空间权限以选取截屏图片</string>
    <string name="permission_feedback_external_storage_denied">我们需要获取读取外部存储空间权限以选取截屏图片</string>
    <string name="permission_feedback_external_storage_neverask">我们需要获取读取外部存储空间权限以选取截屏图片</string>
    <string name="file_name_device_info" translatable="false">deviceInf.txt</string>
    <string name="file_name_device_log" translatable="false">deviceLog.txt</string>
    <string name="feedback_mail_subject">feedback about %1$s</string>
    <string name="Ok">OK</string>
    <string name="your_input">Write your feedback</string>
    <string name="send_feedback">Send</string>
    <string name="from" translatable="false">From:</string>
    <string name="please_write">Please write something.</string>
    <string name="send_feedback_two">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="select_image">+ Add Screenshot</string>
    <string name="click_again">Click again to change the image</string>
    <string name="select_picture_title">Select Picture</string>
    <string name="ok">OK</string>
    <string name="upload_log_and_info">upload System info and Log data</string>
    <string name="system_info">System Info</string>
    <string name="info_fedback_legal_start">"Your "</string>
    <string name="info_fedback_legal_system_info">"system info "</string>
    <string name="info_fedback_legal_and">"and "</string>
    <string name="info_fedback_legal_log_data">"log data "</string>
    <string name="info_fedback_legal_will_be_sent">will be sent to %s</string>
    <string name="space">" "</string>
    <string name="noApplicationToOpen">未找到相关应用打开该文件</string>
    <string name="app_send_error">发送失败</string>
    <string name="share_to_friends">分享给好友</string>
    <string name="qr_code_download">扫描二维码 下载Hello USTB</string>
    <string name="click_to_copy_link">点击二维码可复制下载链接</string>
    <string name="preparing_share">正在准备分享&#8230;</string>
    <string name="app_github_url" translatable="false">https://github.com/genshen/HelloUSTB</string>
    <string name="teach" translatable="false">http://teach.ustb.edu.cn</string>
    <string name="sch_net" translatable="false">http://202.204.48.82</string>
    <string name="tea_login" translatable="false">http://seam.ustb.edu.cn:8080/jwgl/Login</string>
    <string name="cippv6" translatable="false">http://cippv6.ustb.edu.cn/get_ip.php</string>
    <string name="zifuwu_login" translatable="false">http://zifuwu.ustb.edu.cn:8080/logintemp.jsp</string>
    <string name="book_where_suoshu">索书号:</string>
    <string name="book_where_tiaoma">条码号:</string>
    <string name="book_where_year">年卷期:</string>
    <string name="book_where_place">校区—馆藏地:</string>
    <string name="book_where_state">书刊状态:</string>
    <string name="copyUrl">Copy Link</string>
    <string name="openWithOtherBrowser">Open in Browser</string>
    <string name="collect">Collect</string>
    <string name="share">Share</string>
    <string name="fan_menu_innovation_credit">创新学分</string>
    <string name="fan_menu_exam_time_place_query">考试查询</string>
    <string name="fan_menu_record_query">成绩查询</string>
    <string name="detail_class_info">课堂信息</string>
    <string name="detail_course_info">课程信息</string>
    <string name="detail_course_name_key">课程名称</string>
    <string name="detail_course_teach_key">授课老师</string>
    <string name="detail_course_place_key">上课地点</string>
    <string name="detail_course_time_key">上课时间</string>
    <string name="detail_course_student_num_key">课堂人数</string>
    <string name="detail_course_week_key">周数</string>
    <string name="detail_course_position_key">节数</string>
    <string name="detail_course_learn_time_key">课程学时</string>
    <string name="detail_course_credit_key">课程学分</string>
    <string name="detail_course_type_key">课程分类</string>
    <string name="detail_course_time_place_key">所有课堂</string>
    <string name="setting_volunteer_join">Join</string>
    <string name="setting_volunteer_exit">Exit</string>
    <string name="setting_volunteer_collect">Collect</string>
    <string name="logout_ele">注销选课系统网账号</string>
    <string name="logout_network">注销校园网账号</string>
    <string name="logout_volunteer">注销志愿服务课程网账号</string>
    <string name="logout_e">注销信息门户账号</string>
</resources>