<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.holo.helloustb.TimetableDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/detail_class_info" />
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_d"/>

        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_name_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_name_value" />
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_teach_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_teacher_value"/>
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_place_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_place_value"/>
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_time_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_time_value"/>
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_week_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_week_value"/>
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_position_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_position_value"/>
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_student_num_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_student_num_value"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/detail_course_info" />
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_d"/>

        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_learn_time_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_learn_time_value"/>
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_credit_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_credit_value"/>
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_type_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_type_value"/>
        </LinearLayout>
        <LinearLayout style="@style/detail_linear">
            <TextView style="@style/detail_course_key"
                android:text="@string/detail_course_time_place_key"/>
            <TextView style="@style/detail_course_value"
                android:id="@+id/detail_course_time_place_value"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>