<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Browser">
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/copyUrl"
        android:orderInCategory="100"
        android:title="@string/copyUrl"
        app:showAsAction="never" />
    <item
        android:id="@+id/openWithOtherBrowser"
        android:orderInCategory="100"
        android:title="@string/openWithOtherBrowser"
        app:showAsAction="never" />
    <item
        android:id="@+id/collect"
        android:orderInCategory="100"
        android:title="@string/collect"
        app:showAsAction="never" />
</menu>
