<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AccountManager"
    tools:showIn="@layout/activity_account_manager">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account_manager_logout_ele"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/logout_ele" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account_manager_logout_network"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/logout_network" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account_manager_logout_volunteer"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/logout_volunteer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account_manager_logout_e"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/logout_e" />
</LinearLayout>
