<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	<View
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray2"/>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	      	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/book_where_suoshu"/>
		    <TextView
		        android:id="@+id/book_where_suoshu"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/book_where_tiaoma"/>
		    <TextView
		        android:id="@+id/book_where_tiaoma"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/book_where_year"/>
		   <TextView
		        android:id="@+id/book_where_year"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/book_where_place"/>
		    <TextView
		        android:id="@+id/book_where_place"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/book_where_state"/>
		    <TextView
		        android:id="@+id/book_where_state"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
	</LinearLayout>

</LinearLayout>
