<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/avatar_background"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_morning"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/nav_header_padding_bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/nav_header_padding_top"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <me.gensh.views.CircularImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/navigation_image_width"
        android:layout_height="@dimen/navigation_image_width"
        android:contentDescription="@string/image"
        android:layout_marginTop="@dimen/nav_header_avatar_vertical_spacing"
        android:src="@drawable/ic_drawer_login"
        app:civ_border="true"
        app:civ_border_width="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_title_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
