<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/guide_more"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:src="@drawable/guide_more" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:id="@+id/guide_more_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guide_more"
        android:layout_centerHorizontal="true"
        android:text="@string/guide_more"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/more_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guide_more_title"
        android:layout_centerHorizontal="true"
        android:text="@string/guide_more_detail"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/more_detail"
        android:layout_marginTop="20dp"
        android:background="@drawable/start_click"
        android:clickable="true"
        android:onClick="startNewActivity"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>